src/test/deca/context/valid/class/field/field_decl.deca
// Description:
//    Déclaration d'une classe avec un attribut int
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class C {}

class A {
	int a;
	boolean b;
	float c;
	String d;

	int e = 5;
	boolean f = false;
	float g = 5.3;
	String h = "ok";

	protected int i;
	protected boolean j;
	protected float k;
	protected String l;

	protected int m = 15;
	protected boolean n = true;
	protected float o = 5.1234;
	protected String p = "Hello";

	B q;
	B r = new B();
	protected B s;
	protected B t = new B();

	C u;
	C v = new C();
	protected C w;
	protected C x = new C();
}

class B {}

{
	int a = 5;
	a = a + a;
}

