src/test/deca/context/invalid/class/method/field_with_same_name.deca
// Description:
//    Déclaration d'une méthode de nom identique à un champ déjà présente
//
// Resultats:
//    already defined
// 
// Historique:
//    cree le 01/01/2016

class C {
	A a;
	int a() {

	}
}

{

}
